Adding AoC-examples in Java